<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_other" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_13sdp"
                android:layout_marginRight="@dimen/_13sdp"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_140sdp"
                        android:layout_marginTop="@dimen/_23sdp"
                        android:background="@drawable/round_bacround"/>


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cargoclaim"
                        android:adjustViewBounds="true"/>

                </FrameLayout>

                <LinearLayout
                    android:layout_marginTop="@dimen/_23sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Powered by"
                        android:textColor="@color/normal_green"
                        android:textSize="@dimen/_10ssp"
                        android:textStyle="bold"
                        android:gravity="center_vertical"
                        android:layout_gravity="center_vertical"/>

                    <ImageView
                        android:layout_width="@dimen/_63sdp"
                        android:layout_height="@dimen/_16sdp"
                        android:src="@drawable/reco"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_12sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="What is cargo claim?"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/cargo_claim_txt"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_22sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="Who is Recoupex?"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/reco_txt"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_22sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="Consultation"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/consultation_txt"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="How does it work?"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_22sdp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:itemCount="8"
                        tools:listitem="@layout/cargo_work_item"
                        android:layout_marginTop="@dimen/_21sdp"/>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/_2sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/_13sdp"
            android:layout_marginVertical="@dimen/_7sdp"
            android:background="@drawable/round_button"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:paddingVertical="@dimen/_12sdp"
            android:text="PAY 1500"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />

    </androidx.cardview.widget.CardView>

</LinearLayout>