<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/_10sdp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_14sdp"
                android:layout_marginRight="@dimen/_14sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_22sdp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        android:text="@string/port_kyc_title"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/img_close"
                        android:layout_width="@dimen/_17sdp"
                        android:layout_height="@dimen/_17sdp"
                        android:layout_marginTop="@dimen/_14sdp"
                        android:padding="@dimen/_3sdp"
                        android:src="@drawable/close" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_12sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="@dimen/_4sdp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/txt"
                        android:textColor="@color/normal_text"
                        android:textSize="@dimen/_11ssp" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="@dimen/_84sdp"
                            android:layout_height="@dimen/_84sdp"
                            android:background="@drawable/round_bacround"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="@dimen/_73sdp"
                                android:layout_height="@dimen/_73sdp"
                                android:padding="@dimen/_10sdp"
                                android:src="@drawable/book" />

                        </LinearLayout>

                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/_minus12sdp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/round_green_board"
                                android:fontFamily="@font/roboto"
                                android:gravity="center"
                                android:paddingVertical="@dimen/_6sdp"
                                android:paddingHorizontal="@dimen/_24sdp"
                                android:text="Add"
                                android:textColor="@color/new_green"
                                android:textSize="@dimen/_10ssp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/round_red_border"
                                android:fontFamily="@font/roboto"
                                android:paddingHorizontal="@dimen/_15sdp"
                                android:paddingVertical="@dimen/_6sdp"
                                android:gravity="center"
                                android:text="Remove"
                                android:textColor="@color/cancel"
                                android:textSize="@dimen/_10ssp"
                                android:visibility="gone" />
                        </FrameLayout>
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_price_tag"
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:src="@drawable/pricetag" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/price_view"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold"
                        android:layout_marginStart="@dimen/_2sdp"/>
                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/dura"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_7sdp">


                    <ImageView
                        android:layout_width="@dimen/_13sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:src="@drawable/watch" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="10-15 Days"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_19sdp"
                    android:text="*Final price depends on no. of ports you select and GST "
                    android:textColor="@color/normal_text"
                    android:textSize="@dimen/_10ssp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_19sdp"
                    android:background="#CCADADAD" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_23sdp"
                    android:fontFamily="@font/roboto"
                    android:text="Basic requirements"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />



                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/basic_req_item_list"
                    tools:itemCount="1"
                    android:layout_marginTop="@dimen/_12sdp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_23sdp"
                    android:fontFamily="@font/roboto"
                    android:text="Documents required"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/document_req"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_bacround"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_19sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Sole Proprietor"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11sdp"
                        android:layout_marginStart="@dimen/_13sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp" />

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/arrows"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="@dimen/_14sdp"/>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_bacround"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_8sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Partnership Firm"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11sdp"
                        android:layout_marginStart="@dimen/_13sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp" />

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/arrows"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="@dimen/_14sdp"/>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_bacround"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_8sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="LLP, PVT LTD &amp; LTD Firm "
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11sdp"
                        android:layout_marginStart="@dimen/_13sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp" />

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/arrows"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="@dimen/_14sdp"/>


                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:fontFamily="@font/roboto"
                    android:text="Insurer"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="@dimen/_117sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:src="@drawable/bajaj"
                    android:layout_marginEnd="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_12sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:fontFamily="@font/roboto"
                    android:text="Calculate Premium"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Invoice Cost"
                    android:textColor="@color/new_green"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto"
                    android:layout_marginTop="@dimen/_12sdp"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="eg. $14,440"
                    android:textSize="@dimen/_12ssp"
                    android:backgroundTint="@color/normal_text"
                    android:paddingBottom="@dimen/_15sdp"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_10ssp"
                    android:text="Calculate"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:paddingLeft="@dimen/_113sdp"
                    android:paddingRight="@dimen/_113sdp"
                    android:textColor="@color/new_green"
                    android:fontFamily="@font/roboto"
                    android:background="@drawable/round_green_board"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_92sdp"/>



                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/_275sdp"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/_5sdp"

                    android:layout_marginTop="@dimen/_23sdp">

                <LinearLayout
                    android:layout_width="@dimen/_275sdp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10sdp"
                    android:background="@drawable/round_yellow_background">

                    <ImageView
                        android:layout_width="@dimen/_16sdp"
                        android:layout_height="@dimen/_16sdp"
                        android:src="@drawable/pin"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pin_txt"
                        android:textSize="@dimen/_10ssp"
                        android:layout_marginStart="@dimen/_7sdp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto"/>

                </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</LinearLayout>